...
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddShoppingItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
